force-app/main/default/objects/Rpl_Student_Registration_Drive__c/Rpl_Student_Registration_Drive__c.object-meta.xml
<CustomObject>
    <description>This is a junction object for &quot;Student Registration&quot; and &quot;Placement Drives&quot; Objects. As these two objects in many to many relationship. Records in this object will be created when eligibility criteria are been inserted for any particular drive, for the eligible students. By default IsApplied checkbox will be false. When Eligible students applied for any particular drive this checkbox will be turned to true. Once drive completed, those records whose IsApplied are false will be deleted using batch class.</description>
    <label>Student Registration Drive</label>
    <nameField>
        <displayFormat>SRD-{000000}</displayFormat>
        <label>Student Registration Drive No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Registration Drives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>