force-app/main/default/objects/Rpl_Student_Registration_Drive__c/fields/Drive_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Drive_Date_Time__c</fullName>
    <formula>Rpl_Placement_Drive__r.Rpl_Event_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drive Date Time</label>
    <type>DateTime</type>
</CustomField>