force-app/main/default/objects/Rpl_Student_Registration_Drive__c/fields/Drive_Name__c.field-meta.xml
<CustomField>
    <fullName>Drive_Name__c</fullName>
    <formula>Rpl_Placement_Drive__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drive Name</label>
    <type>Text</type>
</CustomField>