force-app/main/default/objects/Rpl_Student_Registration_Drive__c/fields/Rpl_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Company_Name__c</fullName>
    <formula>Rpl_Placement_Drive__r.Rpl_Company_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Name</label>
    <type>Text</type>
</CustomField>