force-app/main/default/objects/Rpl_Student_Registration_Drive__c/fields/Rpl_CTC_Or_Stipend__c.field-meta.xml
<CustomField>
    <fullName>Rpl_CTC_Or_Stipend__c</fullName>
    <formula>IF(!ISNULL( Rpl_Placement_Drive__r.Rpl_CTC__c ) , Rpl_Placement_Drive__r.Rpl_CTC__c ,  Rpl_Placement_Drive__r.Rpl_Stipend__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CTC Or Stipend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>