force-app/main/default/objects/Rpl_Student_Registration_Drive__c/fields/Rpl_Current_Interview_Round__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Current_Interview_Round__c</fullName>
    <formula>Rpl_Interview__r.Rpl_Round_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Interview Round</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>