force-app/main/default/objects/Rpl_Student_Registration_Drive__c/fields/Rpl_Drive_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Drive_End_Date__c</fullName>
    <formula>Rpl_Placement_Drive__r.Rpl_Event_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application End Date</label>
    <type>Date</type>
</CustomField>