force-app/main/default/objects/Rpl_Student_Registration_Drive__c/fields/Rpl_Drive_Venue__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Drive_Venue__c</fullName>
    <formula>Rpl_Placement_Drive__r.Rpl_Venue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drive Venue</label>
    <type>Text</type>
</CustomField>