force-app/main/default/objects/Rpl_Student_Registration_Drive__c/fields/Rpl_For_Graduating_Year__c.field-meta.xml
<CustomField>
    <fullName>Rpl_For_Graduating_Year__c</fullName>
    <formula>TEXT(Rpl_Placement_Drive__r.Rpl_For_Graduating_Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>For Graduating Year</label>
    <type>Text</type>
</CustomField>