force-app/main/default/objects/Rpl_Student_Registration_Drive__c/fields/Rpl_Interview__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Interview__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interview</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Rpl_Interview__c.Placement_Drive__c</field>
            <operation>equals</operation>
            <valueField>$Source.Rpl_Placement_Drive__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Rpl_Interview__c</referenceTo>
    <relationshipLabel>Student Registration Drives</relationshipLabel>
    <relationshipName>Student_Registration_Drives</relationshipName>
    <type>Lookup</type>
</CustomField>