force-app/main/default/objects/Rpl_Student_Registration_Drive__c/fields/Rpl_Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Interview_Date__c</fullName>
    <formula>Rpl_Interview__r.Rpl_Interview_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interview Date</label>
    <type>DateTime</type>
</CustomField>