force-app/main/default/objects/Rpl_Student_Registration_Drive__c/fields/Rpl_Is_Failed__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Is_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to note whether a student was passed or failed in an interview.</description>
    <label>Is Failed</label>
    <type>Checkbox</type>
</CustomField>