force-app/main/default/objects/Rpl_Student_Registration_Drive__c/fields/Rpl_Is_Notification_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Is_Notification_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be checked when an email notification is sent to the students regarding the eligibility of any particular drive.</description>
    <label>Is Notification Email Sent</label>
    <type>Checkbox</type>
</CustomField>