force-app/main/default/objects/Rpl_Student_Registration_Drive__c/fields/Rpl_Is_Offered__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Is_Offered__c</fullName>
    <formula>AND( Rpl_Interview__r.Rpl_Round_Number__c = Rpl_Placement_Drive__r.Rpl_Total_Interview_Round__c , Rpl_Is_Result_Out__c, !Rpl_Is_Failed__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Offered</label>
    <type>Checkbox</type>
</CustomField>