force-app/main/default/objects/Rpl_Student_Registration_Drive__c/fields/Rpl_Is_Offered_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Is_Offered_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Offered</label>
    <type>Checkbox</type>
</CustomField>