force-app/main/default/objects/Rpl_Student_Registration_Drive__c/fields/Rpl_Is_Present__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Is_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox ensures whether a student attends the drive.</description>
    <label>Is Present</label>
    <type>Checkbox</type>
</CustomField>