force-app/main/default/objects/Rpl_Student_Registration_Drive__c/fields/Rpl_Is_Result_Out__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Is_Result_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Result Out</label>
    <type>Checkbox</type>
</CustomField>