force-app/main/default/objects/Rpl_Student_Registration_Drive__c/fields/Rpl_IsApplied__c.field-meta.xml
<CustomField>
    <fullName>Rpl_IsApplied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>At first, this checkbox will be unchecked, when students apply for that particular drive then it will be checked</description>
    <label>Is Applied</label>
    <type>Checkbox</type>
</CustomField>