force-app/main/default/objects/Rpl_Student_Registration_Drive__c/fields/Rpl_Job_Description_URL__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Job_Description_URL__c</fullName>
    <formula>Rpl_Placement_Drive__r.Rpl_Job_Description_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Description URL</label>
    <type>Text</type>
</CustomField>