force-app/main/default/objects/Rpl_Student_Registration_Drive__c/fields/Rpl_Personal_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Personal_Email_Id__c</fullName>
    <formula>Rpl_Student_Registration__r.Rpl_Personal_Mail_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Personal Email Id</label>
    <type>Text</type>
</CustomField>