force-app/main/default/objects/Rpl_Student_Registration_Drive__c/fields/Rpl_Placement_Drive__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Placement_Drive__c</fullName>
    <label>Placement Drive</label>
    <referenceTo>Rpl_Placement_Drive__c</referenceTo>
    <relationshipLabel>Student Registration Drives</relationshipLabel>
    <relationshipName>Student_Registration_Drives</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>