force-app/main/default/objects/Rpl_Student_Registration_Drive__c/fields/Rpl_Placement_Registration_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Placement_Registration_End_Date__c</fullName>
    <formula>Rpl_Placement_Drive__r.Reva_Placement__r.Rpl_Registration_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Placement Registration End Date</label>
    <type>Date</type>
</CustomField>