force-app/main/default/objects/Rpl_Student_Registration_Drive__c/fields/Rpl_QR_Code__c.field-meta.xml
<CustomField>
    <fullName>Rpl_QR_Code__c</fullName>
    <formula>IMAGE(&apos;https://quickchart.io/qr?text=&apos; +
&apos;{ &quot;studentRegCollegeId&quot; : &quot;&apos; + Rpl_Student_Registration__r.Contact__r.SRN_Number__c + &apos;&quot;, &quot;driveNumber&quot; : &quot;&apos; +  Drive_Name__c  + &apos;&quot; }&apos;
, &apos;Test&apos;)</formula>
    <inlineHelpText>When scanning this qr we can get student&apos;s college registration id and drive name</inlineHelpText>
    <label>QR Code</label>
    <type>Text</type>
</CustomField>