force-app/main/default/objects/Rpl_Student_Registration_Drive__c/fields/Rpl_QR_Href_Link__c.field-meta.xml
<CustomField>
    <fullName>Rpl_QR_Href_Link__c</fullName>
    <formula>&apos;https://quickchart.io/qr?text=&apos; +
&apos;{ &quot;studentRegCollegeId&quot; : &quot;&apos; + Rpl_Student_Registration__r.Contact__r.SRN_Number__c + &apos;&quot;, &quot;driveNumber&quot; : &quot;&apos; + Rpl_Placement_Drive__r.Name + &apos;&quot; }&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Href link of the QR Code</inlineHelpText>
    <label>QR Href Link</label>
    <type>Text</type>
</CustomField>