force-app/main/default/objects/Rpl_Student_Registration_Drive__c/fields/Rpl_Recruitment_Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Recruitment_Stage_Name__c</fullName>
    <formula>Rpl_Interview__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recruitment Stage Name</label>
    <type>Text</type>
</CustomField>