force-app/main/default/objects/Rpl_Student_Registration_Drive__c/fields/Rpl_Registration_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Registration_End_Time__c</fullName>
    <formula>Rpl_Placement_Drive__r.Rpl_Application_End_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration End Time</label>
    <type>Time</type>
</CustomField>