force-app/main/default/objects/Rpl_Student_Registration_Drive__c/fields/Rpl_Result__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Result__c</fullName>
    <formula>IF( Rpl_Is_Failed__c , &apos;REJECTED&apos; , 

IF( Rpl_Is_Offered__c , &apos;OFFERED&apos;, &apos;SHORTLISTED&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Result</label>
    <type>Text</type>
</CustomField>