force-app/main/default/objects/Rpl_Student_Registration_Drive__c/fields/Rpl_SRN__c.field-meta.xml
<CustomField>
    <fullName>Rpl_SRN__c</fullName>
    <formula>Rpl_Student_Registration__r.Rpl_SRN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SRN</label>
    <type>Text</type>
</CustomField>