force-app/main/default/objects/Rpl_Student_Registration_Drive__c/fields/Rpl_Stipend__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Stipend__c</fullName>
    <formula>Rpl_Placement_Drive__r.Rpl_Stipend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stipend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>