force-app/main/default/objects/Rpl_Student_Registration_Drive__c/fields/Rpl_Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Student_Name__c</fullName>
    <formula>Rpl_Student_Registration__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Name</label>
    <type>Text</type>
</CustomField>