force-app/main/default/objects/Rpl_Student_Registration_Drive__c/fields/Rpl_Student_Registration__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Student_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Registration</label>
    <referenceTo>Rpl_Student_Registration__c</referenceTo>
    <relationshipLabel>Student Registration Drives</relationshipLabel>
    <relationshipName>Student_Registration_Drives</relationshipName>
    <type>Lookup</type>
</CustomField>