force-app/main/default/objects/Rpl_Student_Registration_Drive__c/fields/Rpl_Total_Interview_Rounds__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Total_Interview_Rounds__c</fullName>
    <formula>Rpl_Placement_Drive__r.Rpl_Total_Interview_Round__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Interview Rounds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>