force-app/main/default/objects/Rpl_Student_Registration_Drive__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Rpl_Student_Registration__c</columns>
    <columns>Rpl_Placement_Drive__c</columns>
    <columns>Rpl_Is_Offered__c</columns>
    <columns>Rpl_Is_Offered_Checkbox__c</columns>
    <columns>Rpl_IsApplied__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>